RESOLVED FIXED 250556
[@property] Failing to provide intialValue in registerProperty with non-universal syntax should throw
https://bugs.webkit.org/show_bug.cgi?id=250556
Summary [@property] Failing to provide intialValue in registerProperty with non-unive...
Antti Koivisto
Reported 2023-01-13 02:32:03 PST
web-platform-tests/css/css-properties-values-api/register-property.html
Attachments
Antti Koivisto
Comment 1 2023-01-13 02:37:42 PST
Radar WebKit Bug Importer
Comment 2 2023-01-13 22:20:28 PST
EWS
Comment 3 2023-01-13 23:31:16 PST
Committed 258909@main (6736a31764fa): <https://commits.webkit.org/258909@main> Reviewed commits have been landed. Closing PR #8612 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.