[@property] Failing to provide intialValue in registerProperty with non-universal syntax should throw https://bugs.webkit.org/show_bug.cgi?id=250556 <rdar://problem/104254311>

Reviewed by Simon Fraser.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/register-property-expected.txt:
* Source/WebCore/css/DOMCSSRegisterCustomProperty.cpp:
(WebCore::DOMCSSRegisterCustomProperty::registerProperty):

Throw is needed.

Canonical link: https://commits.webkit.org/258909@main